// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/ProductBenefits/index render 1`] = `
<div
  style={
    Object {
      "background": "#F5F5F5",
      "border": "2px dashed #E4E7E9",
      "borderTop": "none",
      "position": "relative",
    }
  }
>
  <SectionMark
    description=""
    isDisplay={false}
    nonmandatory={true}
    onChange={[Function]}
    title="Product Benefits"
  />
  <div
    style={
      Object {
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 4rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": "1rem",
        }
      }
    >
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize="2.25rem"
        multiline={true}
        name="productDetailBenefitTitleid"
        noSpacing={true}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="center"
        weight="bold"
      />
    </div>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <React.Fragment>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={4}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))>
            <WithStyles(ForwardRef(CardContent))
              style={
                Object {
                  "padding": 0,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "marginBottom": "1rem",
                  }
                }
              >
                <img
                  alt="images"
                  src="images"
                  style={
                    Object {
                      "height": 72,
                      "width": 72,
                    }
                  }
                />
              </div>
              <div>
                <TextField
                  colorPlaceholder="black"
                  control={Object {}}
                  disabled={false}
                  fontSize="1.25rem"
                  multiline={true}
                  name="BenefitListid[0].title"
                  noSpacing={true}
                  placeholder="Ketik judul tipe produk di sini.."
                  position="center"
                  weight="medium"
                />
              </div>
              <div>
                <TextField
                  colorPlaceholder="black"
                  control={Object {}}
                  disabled={false}
                  fontSize={14}
                  multiline={true}
                  name="BenefitListid[0].description"
                  noSpacing={true}
                  placeholder="Ketik deskripsi tipe produk di sini.."
                  position="center"
                  weight="normal"
                />
              </div>
            </WithStyles(ForwardRef(CardContent))>
            <div
              onClick={[Function]}
            >
              ✖
            </div>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={4}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))>
            <WithStyles(ForwardRef(CardContent))
              style={
                Object {
                  "padding": 0,
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "marginBottom": "1rem",
                  }
                }
              >
                <UploadImage
                  alt="Link gambar disini.."
                  disabled={false}
                  getUpdateItem={[MockFunction]}
                  isIcon={false}
                  isValidateByPixel={false}
                  item={Object {}}
                  maxSize={358400}
                  previewState={
                    Object {
                      "preview": Object {},
                      "setPreview": [MockFunction],
                    }
                  }
                  ratioPixel={
                    Array [
                      32,
                      32,
                    ]
                  }
                  sectionName="Benefit"
                  sizeBig={false}
                  type="icon"
                />
              </div>
              <TextField
                colorPlaceholder="black"
                control={Object {}}
                fontSize="1.25rem"
                multiline={true}
                name="BenefitTitleid"
                noSpacing={true}
                placeholder="Ketik judul kartu di sini.."
                position="center"
                weight="medium"
              />
              <TextField
                colorPlaceholder="black"
                control={Object {}}
                fontSize={14}
                multiline={true}
                name="BenefitDescid"
                noSpacing={true}
                placeholder="Ketik deskripsi kartu di sini.."
                position="center"
                weight="normal"
              />
            </WithStyles(ForwardRef(CardContent))>
            <WithStyles(ForwardRef(CardActions))
              style={
                Object {
                  "bottom": 0,
                  "left": "50%",
                  "position": "absolute",
                  "transform": "translate(-50%, 50%)",
                }
              }
            >
              <Button
                disabled={true}
                leftIcon={null}
                loading={false}
                ml={0}
                mr={0}
                onClick={[MockFunction]}
                rightIcon={null}
                rounded="normal"
                textTransform="uppercase"
                variant="filled"
              >
                add product benefit
              </Button>
            </WithStyles(ForwardRef(CardActions))>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <div />
      </React.Fragment>
    </WithStyles(ForwardRef(Grid))>
  </div>
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/ProductBenefits/index render null data 1`] = `
<div
  style={
    Object {
      "background": "#F5F5F5",
      "border": "2px dashed #E4E7E9",
      "borderTop": "none",
      "position": "relative",
    }
  }
>
  <SectionMark
    description=""
    isDisplay={false}
    nonmandatory={true}
    onChange={[Function]}
    title="Product Benefits"
  />
  <div
    style={
      Object {
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 4rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": "1rem",
        }
      }
    >
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize="2.25rem"
        multiline={true}
        name="productDetailBenefitTitleid"
        noSpacing={true}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="center"
        weight="bold"
      />
    </div>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <React.Fragment>
        
        
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={4}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))>
            <WithStyles(ForwardRef(CardContent))
              style={
                Object {
                  "padding": 0,
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "marginBottom": "1rem",
                  }
                }
              >
                <UploadImage
                  alt="Link gambar disini.."
                  disabled={false}
                  getUpdateItem={[MockFunction]}
                  isIcon={false}
                  isValidateByPixel={false}
                  item={Object {}}
                  maxSize={358400}
                  previewState={
                    Object {
                      "preview": Object {},
                      "setPreview": [MockFunction],
                    }
                  }
                  ratioPixel={
                    Array [
                      32,
                      32,
                    ]
                  }
                  sectionName="Benefit"
                  sizeBig={false}
                  type="icon"
                />
              </div>
              <TextField
                colorPlaceholder="black"
                control={Object {}}
                fontSize="1.25rem"
                multiline={true}
                name="BenefitTitleid"
                noSpacing={true}
                placeholder="Ketik judul kartu di sini.."
                position="center"
                weight="medium"
              />
              <TextField
                colorPlaceholder="black"
                control={Object {}}
                fontSize={14}
                multiline={true}
                name="BenefitDescid"
                noSpacing={true}
                placeholder="Ketik deskripsi kartu di sini.."
                position="center"
                weight="normal"
              />
            </WithStyles(ForwardRef(CardContent))>
            <WithStyles(ForwardRef(CardActions))
              style={
                Object {
                  "bottom": 0,
                  "left": "50%",
                  "position": "absolute",
                  "transform": "translate(-50%, 50%)",
                }
              }
            >
              <Button
                disabled={true}
                leftIcon={null}
                loading={false}
                ml={0}
                mr={0}
                onClick={[MockFunction]}
                rightIcon={null}
                rounded="normal"
                textTransform="uppercase"
                variant="filled"
              >
                add product benefit
              </Button>
            </WithStyles(ForwardRef(CardActions))>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <div />
      </React.Fragment>
    </WithStyles(ForwardRef(Grid))>
  </div>
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/ProductBenefits/index render tab en 1`] = `
<div
  style={
    Object {
      "background": "#F5F5F5",
      "border": "2px dashed #E4E7E9",
      "borderTop": "none",
      "position": "relative",
    }
  }
>
  <SectionMark
    description=""
    isDisplay={false}
    nonmandatory={true}
    onChange={[Function]}
    title="Product Benefits"
  />
  <div
    style={
      Object {
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 4rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": "1rem",
        }
      }
    >
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={false}
        fontSize="2.25rem"
        multiline={true}
        name="productDetailBenefitTitleen"
        noSpacing={true}
        placeholder="Type the content of the title here in English.."
        position="center"
        weight="bold"
      />
    </div>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <React.Fragment>
        
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={4}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))>
            <WithStyles(ForwardRef(CardContent))
              style={
                Object {
                  "padding": 0,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "marginBottom": "1rem",
                  }
                }
              >
                <img
                  alt="images"
                  src="images"
                  style={
                    Object {
                      "height": 72,
                      "width": 72,
                    }
                  }
                />
              </div>
              <div>
                <TextField
                  colorPlaceholder="black"
                  control={Object {}}
                  disabled={false}
                  fontSize="1.25rem"
                  multiline={true}
                  name="BenefitListen[0].title"
                  noSpacing={true}
                  placeholder="Type the card title here.."
                  position="center"
                  weight="medium"
                />
              </div>
              <div>
                <TextField
                  colorPlaceholder="black"
                  control={Object {}}
                  disabled={false}
                  fontSize={14}
                  multiline={true}
                  name="BenefitListen[0].description"
                  noSpacing={true}
                  placeholder="Type the card description here.."
                  position="center"
                  weight="normal"
                />
              </div>
            </WithStyles(ForwardRef(CardContent))>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        <div />
      </React.Fragment>
    </WithStyles(ForwardRef(Grid))>
  </div>
</div>
`;

exports[`src/containers/ContentManagement/Product/Add-v2/lib/section/ProductBenefits/index render tab en 2 1`] = `
<div
  style={
    Object {
      "background": "#F5F5F5",
      "border": "none",
      "borderTop": "none",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "marginInline": "auto",
        "maxWidth": "1280px",
        "padding": "5rem 1rem",
        "width": "100%",
      }
    }
  >
    <div
      style={
        Object {
          "marginBottom": "1rem",
        }
      }
    >
      <TextField
        colorPlaceholder="black"
        control={Object {}}
        disabled={true}
        fontSize="2.25rem"
        multiline={true}
        name="productDetailBenefitTitleid"
        noSpacing={true}
        placeholder="Ketik konten judul di sini dalam Bahasa.."
        position="center"
        weight="bold"
      />
    </div>
    <WithStyles(ForwardRef(Grid))
      container={true}
      spacing={5}
    >
      <React.Fragment>
        <WithStyles(ForwardRef(Grid))
          item={true}
          md={4}
          xs={12}
        >
          <WithStyles(ForwardRef(Card))>
            <WithStyles(ForwardRef(CardContent))
              style={
                Object {
                  "padding": 0,
                  "textAlign": "center",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": "flex",
                    "justifyContent": "center",
                    "marginBottom": "1rem",
                  }
                }
              >
                <img
                  alt="images"
                  src="images"
                  style={
                    Object {
                      "height": 72,
                      "width": 72,
                    }
                  }
                />
              </div>
              <div>
                <TextField
                  colorPlaceholder="black"
                  control={Object {}}
                  disabled={true}
                  fontSize="1.25rem"
                  multiline={true}
                  name="BenefitListid[0].title"
                  noSpacing={true}
                  placeholder="Ketik judul tipe produk di sini.."
                  position="center"
                  weight="medium"
                />
              </div>
              <div>
                <TextField
                  colorPlaceholder="black"
                  control={Object {}}
                  disabled={true}
                  fontSize={14}
                  multiline={true}
                  name="BenefitListid[0].description"
                  noSpacing={true}
                  placeholder="Ketik deskripsi tipe produk di sini.."
                  position="center"
                  weight="normal"
                />
              </div>
            </WithStyles(ForwardRef(CardContent))>
          </WithStyles(ForwardRef(Card))>
        </WithStyles(ForwardRef(Grid))>
        
        <div
          className={false}
        />
      </React.Fragment>
    </WithStyles(ForwardRef(Grid))>
  </div>
</div>
`;
